--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,16 @@
     <build>
         <finalName>restapi</finalName>
         <plugins>
+            <!-- Tomcat plugin -->
+            <plugin>
+                <groupId>org.apache.tomcat.maven</groupId>
+                <artifactId>tomcat7-maven-plugin</artifactId>
+                <version>2.2</version>
+                <configuration>
+                    <path>/</path>
+                    <port>8082</port>
+                </configuration>
+            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
@@ -77,10 +87,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-war-plugin</artifactId>
-                <configuration>
-                    <outputDirectory>c:/Tools/apache-tomcat-9.0.19/webapps</outputDirectory>
-                </configuration>
             </plugin>
-        </plugins>
+         </plugins>
     </build>
 </project>
