--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,8 @@ services:
     - mysql
 
 before_install:
-  - echo "USE mysql;\nUPDATE user SET password=root('password') WHERE user='root';\nFLUSH PRIVILEGES;\n" | mysql -u root
+#  - echo "USE mysql;\nUPDATE user SET password=root('password') WHERE user='root';\nFLUSH PRIVILEGES;\n" | mysql -u root
+#  mysql -e 'update mysql.user set authentication_string=password("1111") where user="root"' ;
 #  - mysql -e 'CREATE DATABASE IF NOT EXISTS restapi;
 
 cache:
