--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ services:
     - mysql
 
 before_install:
-  - mysql -e 'CREATE DATABASE IF NOT EXISTS restapi;
+  - mysql -e 'CREATE DATABASE IF NOT EXISTS restapi;'
 
 cache:
   directories:
