--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,8 @@ services:
     - mysql
 
 before_install:
-  - mysql -e 'UPDATE mysql.user SET plugin = 'mysql_native_password', authentication_string = PASSWORD('root') WHERE User = 'root';'
+  - mysql -e 'UPDATE mysql.user SET authentication_string=PASSWORD('root') WHERE user='root';'
+  - mysql -e 'FLUSH PRIVILEGES;'
   - mysql -e 'CREATE DATABASE IF NOT EXISTS restapi;'
 
 cache:
