--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,9 @@ services:
     - mysql
 
 before_install:
+  - mysql -e "SELECT plugin from mysql.user where User='root';"
+  - mysql -e "UPDATE mysql.user SET plugin = 'mysql_native_password', authentication_string = PASSWORD('root') WHERE User = 'root';"
+  - mysql -e 'FLUSH PRIVILEGES;'
   - mysql -e 'CREATE DATABASE IF NOT EXISTS restapi;'
 
 cache:
