--- a/.travis.yml
+++ b/.travis.yml
@@ -5,15 +5,8 @@ services:
     - mysql
 
 before_install:
-  - sudo service mysql stop
-  - sudo mysqld --skip-grant-tables --user=root
-  - mysql -u root
-#  - mysql -e "SELECT plugin from mysql.user where User='root';"
-  - mysql -e "UPDATE mysql.user SET authentication_string=PASSWORD('root'), plugin='mysql_native_password' WHERE User='root' AND Host='localhost';"
-  - mysql -e 'FLUSH PRIVILEGES;'
+  - mysql -e 'SET PASSWORD FOR root@localhost=PASSWORD('root');'
   - mysql -e 'CREATE DATABASE IF NOT EXISTS restapi;'
-
-
 
 cache:
   directories:
