--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ services:
 
 before_install:
   - sudo mysqladmin -u root password root
+  - mysql -u roo -p root
   - mysql -e 'CREATE DATABASE IF NOT EXISTS restapi;'
 
 cache:
