Travis mysql настройка подключения к БД

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ services:
 
 before_install:
   - sudo mysqladmin -u root password root
-  - mysql -u roo -p root
+  - mysql -u root -p root
   - mysql -e 'CREATE DATABASE IF NOT EXISTS restapi;'
 
 cache:
