--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ services:
 
 before_install:
   - sudo mysqladmin -u root password root
-  - mysql -u root -proot
+  - mysql -u root -proot;
   - mysql -e 'CREATE DATABASE IF NOT EXISTS restapi;'
 
 cache:
